packages/isar_plus/test/errors/id/wrong_type.dart
// only int and string properties can be used as id

import 'package:isar_plus/isar_plus.dart';

@collection
class Test {
  late bool id;
}
